@@ -17,13 +17,15 @@ we recommend you install both GMT 4 (e.g., 4.5.7) and 5 beta
 and use the gmtswitch script to quickly switch between any
 number of GMT installations.  GMT 5b comes with a gmtswitch.bat
 script that allows this functionality under Windows as well.
-See gmtswitch man page for details.
+See the new gmtswitch man page for details.
 
 Because this is a beta release it is possible that only some
-mirrors will sync - please use the SOEST site your nearest
+mirrors will sync - please select the SOEST site your nearest
 site is not populated.
 
-To obtain GMT 5b, visit the GMT 5 web site www.soest.hawaii.edu/gmt5
+Make sure to consider participating in the GMT 5 LOGO CONTEST;
+To obtain GMT 5b and see the guidelines for the contest, visit
+the GMT 5 web site www.soest.hawaii.edu/gmt5
 
 Sincerely,
 
