@@ -37,7 +37,7 @@ can read time-series data that are "Y2K-challenged" (i.e., 2-digit years only).<
 computers from Cray, Sun, IBM, DEC, HP, SGI, Data General, Apple (Mac OS X), and Next, all running
 some flavor of UNIX.  GMT has also been installed under Linux and MkLinux, which are
 open source UNIX-like operating systems for PC and Mac OS 9, respectively.  GMT also
-installs under all flavors of Windows and OS/2.
+installs under all flavors of Windows.
 GMT is very portable and should compile on almost any computer.</P></LI>
 <HR>
 <LI>	<A> Can GMT run on non-UNIX computers ? </A>
@@ -57,7 +57,7 @@ Under MacOS 9 or earlier you could install <A HREF="http://www.tenon.com" target
 thing on an older Macintosh (Mac OS X, of course, is UNIX-based).  We prefer the
 UNIX-options for Windows over DOS-style batch scripts since many tasks that GMT is used
 for depend strongly on access to UNIX tools such as csh, awk, grep, sed, etc.</P></LI>
-<LI>Install GMT directly in Windows or OS/2.  You could do this from scratch if you
+<LI>Install GMT directly in Windows.  You could do this from scratch if you
 have a compiler (GMT comes with instructions for Microsoft Visual C/C++ compiler), or
 simply install the pre-compiled Win32 executables from the ftp sites.
 Sorry, there is no such option for MacOS 9 or earlier.  If you have MacOS X you can
@@ -111,16 +111,11 @@ graphical interface to manipulate GMT grids.</LI>
 <LI><A HREF="http://www.seismology.harvard.edu/~becker/igmt" target="_blank">iGMT</A>
 (interactive Mapping of Geoscientific Datasets) which is an interface
 built using the Tcl/Tk toolkit</LI>
-<LI><A HREF="http://www.icm.csic.es/geo/gma/geo0uk.html" target="_blank">Win4GMT</A>,
-a GUI for Windows.</LI>
 </UL>
 </LI>
 <HR>
 <LI>	<A> Are there other packages that use GMT ? </A>
 <UL>
-<LI>Those who are using GIS, in particular Arc/INFO and ArcView, may be
-interested in <A HREF="http://dusk.geo.orst.edu/arcgmt" target="_blank">arcGMT</A>,
-a suite of tools for conversion between Arc/INFO and GMT.</LI>
 <LI>For multi-beam enthusiasts, there is
 <A HREF="http://www.ldeo.columbia.edu/MB-System" target="_blank">MB-System</A>,
 a software package for the processing and display of swath sonar data</LI>
