@@ -7,6 +7,9 @@
 	GMT 5.0.0b finalized and released.
 -----------------------------------------------------------------------------------------
 
+2011-08-25	pwessel
+	* grdtrack_func.c:	Added -N to NOT skip points outside grid domain.
+
 2011-08-24	jluis
 	* gmtapi_util.c:	A bit of voodoo programming to make vanish some tests crash on Windows
 
